--- a/tetris/pom.xml
+++ b/tetris/pom.xml
@@ -69,6 +69,9 @@
                     <targetTests>
                         <param>org.janitor.tetris.*</param>
                     </targetTests>
+                    <excludedClasses>
+                        <param>org.janitor.tetris.ui.*</param>
+                    </excludedClasses>
                 </configuration>
             </plugin>
         </plugins>
